--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,1156 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap');
+body {
+  margin: 0;
+}
+.app {
+  overflow-x: hidden;
+}
+
+* {
+  font-family: 'Nunito', sans-serif;
+}
+
+.flex {
+  display: flex;
+}
+.flex-col {
+  flex-direction: column;
+}
+.flex-row {
+  flex-direction: row;
+}
+.items-center {
+  align-items: center;
+}
+.items-start {
+  align-items: start;
+}
+.items-end {
+  align-items: end;
+}
+.items-stretch {
+  align-items: stretch;
+}
+.grid {
+  display: grid;
+}
+.place-items-center {
+  place-items: center;
+}
+.justify-between {
+  justify-content: space-between;
+}
+.justify-around {
+  justify-content: space-around;
+}
+.justify-evenly {
+  justify-content: space-evenly;
+}
+.justify-start {
+  justify-content: start;
+}
+.justify-center {
+  justify-content: center;
+}
+.flex-1 {
+  flex: 1;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+.text-center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* /////////////////////////////////////////////////////////////////////////////////// */
+
+.mt-1 {
+  margin-top: 1px;
+}
+.mt-2 {
+  margin-top: 2px;
+}
+.mt-5 {
+  margin-top: 5px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
+.mt-20 {
+  margin-top: 20px;
+}
+.mt-30 {
+  margin-top: 30px;
+}
+.mt-50 {
+  margin-top: 50px;
+}
+.mt-100 {
+  margin-top: 100px;
+}
+.mt-200 {
+  margin-top: 200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mb-1 {
+  margin-bottom: 1px;
+}
+.mb-2 {
+  margin-bottom: 2px;
+}
+.mb-5 {
+  margin-bottom: 5px;
+}
+.mb-10 {
+  margin-bottom: 10px;
+}
+.mb-20 {
+  margin-bottom: 20px;
+}
+.mb-30 {
+  margin-bottom: 30px;
+}
+.mb-50 {
+  margin-bottom: 50px;
+}
+.mb-100 {
+  margin-bottom: 100px;
+}
+.mb-200 {
+  margin-bottom: 200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.ml-1 {
+  margin-left: 1px;
+}
+.ml-2 {
+  margin-left: 2px;
+}
+.ml-5 {
+  margin-left: 5px;
+}
+.ml-10 {
+  margin-left: 10px;
+}
+.ml-20 {
+  margin-left: 20px;
+}
+.ml-30 {
+  margin-left: 30px;
+}
+.ml-50 {
+  margin-left: 50px;
+}
+.ml-100 {
+  margin-left: 100px;
+}
+.ml-200 {
+  margin-left: 200px;
+}
+
+.mr-1 {
+  margin-right: 1px;
+}
+.mr-2 {
+  margin-right: 2px;
+}
+.mr-5 {
+  margin-right: 5px;
+}
+.mr-10 {
+  margin-right: 10px;
+}
+.mr-20 {
+  margin-right: 20px;
+}
+.mr-30 {
+  margin-right: 30px;
+}
+.mr-50 {
+  margin-right: 50px;
+}
+.mr-100 {
+  margin-right: 100px;
+}
+.mr-200 {
+  margin-right: 200px;
+}
+
+.pt-1 {
+  padding-top: 1px;
+}
+.pt-2 {
+  padding-top: 2px;
+}
+.pt-5 {
+  padding-top: 5px;
+}
+.pt-10 {
+  padding-top: 10px;
+}
+.pt-20 {
+  padding-top: 20px;
+}
+.pt-30 {
+  padding-top: 30px;
+}
+.pt-50 {
+  padding-top: 50px;
+}
+.pt-100 {
+  padding-top: 100px;
+}
+.pt-200 {
+  padding-top: 200px;
+}
+
+.pb-1 {
+  padding-bottom: 1px;
+}
+.pb-2 {
+  padding-bottom: 2px;
+}
+.pb-5 {
+  padding-bottom: 5px;
+}
+.pb-10 {
+  padding-bottom: 10px;
+}
+.pb-20 {
+  padding-bottom: 20px;
+}
+.pb-30 {
+  padding-bottom: 30px;
+}
+.pb-50 {
+  padding-bottom: 50px;
+}
+.pb-100 {
+  padding-bottom: 100px;
+}
+.pb-200 {
+  padding-bottom: 200px;
+}
+
+.pl-1 {
+  padding-left: 1px;
+}
+.pl-2 {
+  padding-left: 2px;
+}
+.pl-5 {
+  padding-left: 5px;
+}
+.pl-10 {
+  padding-left: 10px;
+}
+.pl-20 {
+  padding-left: 20px;
+}
+.pl-30 {
+  padding-left: 30px;
+}
+.pl-50 {
+  padding-left: 50px;
+}
+.pl-100 {
+  padding-left: 100px;
+}
+.pl-200 {
+  padding-left: 200px;
+}
+
+.pr-1 {
+  padding-right: 1px;
+}
+.pr-2 {
+  padding-right: 2px;
+}
+.pr-5 {
+  padding-right: 5px;
+}
+.pr-10 {
+  padding-right: 10px;
+}
+.pr-20 {
+  padding-right: 20px;
+}
+.pr-30 {
+  padding-right: 30px;
+}
+.pr-50 {
+  padding-right: 50px;
+}
+.pr-100 {
+  padding-right: 100px;
+}
+.pr-200 {
+  padding-right: 200px;
+}
+
+.px-1 {
+  padding: 0 1px;
+}
+.px-2 {
+  padding: 0 2px;
+}
+.px-5 {
+  padding: 0 5px;
+}
+.px-10 {
+  padding: 0 10px;
+}
+.px-20 {
+  padding: 0 20px;
+}
+.px-30 {
+  padding: 0 30px;
+}
+.px-50 {
+  padding: 0 50px;
+}
+.px-100 {
+  padding: 0 100px;
+}
+.px-200 {
+  padding: 0 200px;
+}
+
+.py-1 {
+  padding: 1px 0;
+}
+.py-2 {
+  padding: 2px 0;
+}
+.py-5 {
+  padding: 5px 0;
+}
+.py-10 {
+  padding: 10px 0;
+}
+.py-20 {
+  padding: 20px 0;
+}
+.py-30 {
+  padding: 30px 0;
+}
+.py-50 {
+  padding: 50px 0;
+}
+.py-100 {
+  padding: 100px 0;
+}
+.py-200 {
+  padding: 200px 0;
+}
+
+.mx-1 {
+  margin: 0 1px;
+}
+.mx-2 {
+  margin: 0 2px;
+}
+.mx-5 {
+  margin: 0 5px;
+}
+.mx-10 {
+  margin: 0 10px;
+}
+.mx-20 {
+  margin: 0 20px;
+}
+.mx-30 {
+  margin: 0 30px;
+}
+.mx-50 {
+  margin: 0 50px;
+}
+.mx-100 {
+  margin: 0 100px;
+}
+.mx-200 {
+  margin: 0 200px;
+}
+
+.my-1 {
+  margin: 1px 0;
+}
+.my-2 {
+  margin: 2px 0;
+}
+.my-5 {
+  margin: 5px 0;
+}
+.my-10 {
+  margin: 10px 0;
+}
+.my-20 {
+  margin: 20px 0;
+}
+.my-30 {
+  margin: 30px 0;
+}
+.my-50 {
+  margin: 50px 0;
+}
+.my-100 {
+  margin: 100px 0;
+}
+.my-200 {
+  margin: 200px 0;
+}
+
+/* ///////////////////////////////////////////////////////////////////// */
+
+.w-full {
+  width: 100% !important;
+}
+.h-full {
+  height: 100vh !important;
+}
+.full-vh {
+  height: 100vh !important;
+}
+.full-vw {
+  width: 100vw !important;
+}
+.w-1 {
+  width: 1px !important;
+}
+.w-2 {
+  width: 2px !important;
+}
+.w-5 {
+  width: 5px !important;
+}
+.w-10 {
+  width: 10px !important;
+}
+.w-20 {
+  width: 20px !important;
+}
+.w-30 {
+  width: 30px !important;
+}
+.w-50 {
+  width: 50px !important;
+}
+.w-100 {
+  width: 100px !important;
+}
+.w-150 {
+  width: 150px !important;
+}
+.w-200 {
+  width: 200px !important;
+}
+.w-300 {
+  width: 300px !important;
+}
+.w-400 {
+  width: 400px !important;
+}
+.w-500 {
+  width: 500px !important;
+}
+.w-600 {
+  width: 600px !important;
+}
+.w-700 {
+  width: 700px !important;
+}
+.w-800 {
+  width: 800px !important;
+}
+.w-1000 {
+  width: 1000px !important;
+}
+.w-half {
+  width: 50% !important;
+}
+.w-oneThird {
+  width: 33.33% !important;
+}
+.w-oneFourth {
+  width: 25% !important;
+}
+.w-twoThird {
+  width: 66.66% !important;
+}
+
+.h-1 {
+  height: 1px !important;
+}
+.h-2 {
+  height: 2px !important;
+}
+.h-5 {
+  height: 5px !important;
+}
+.h-10 {
+  height: 10px !important;
+}
+.h-20 {
+  height: 20px !important;
+}
+.h-30 {
+  height: 30px !important;
+}
+.h-50 {
+  height: 50px !important;
+}
+.h-100 {
+  height: 100px !important;
+}
+.h-150 {
+  height: 150px !important;
+}
+.h-200 {
+  height: 200px !important;
+}
+.h-300 {
+  height: 300px !important;
+}
+.h-400 {
+  height: 400px !important;
+}
+.h-500 {
+  height: 500px !important;
+}
+.h-600 {
+  height: 600px !important;
+}
+.h-700 {
+  height: 700px !important;
+}
+.h-800 {
+  height: 800px !important;
+}
+.h-1000 {
+  height: 1000px !important;
+}
+.h-half {
+  height: 50% !important;
+}
+.h-oneThird {
+  height: 33.33% !important;
+}
+.h-oneFourth {
+  height: 25% !important;
+}
+.h-twoThird {
+  height: 66.66% !important;
+}
+
+/* //////////////////////////////////////////////////////////////// */
+
+.text-xs {
+  font-size: 12px !important;
+}
+.text-sm {
+  font-size: 14px !important;
+}
+.text-base {
+  font-size: 16px !important;
+}
+.text-lg {
+  font-size: 18px !important;
+}
+.text-xl {
+  font-size: 20px !important;
+}
+.text-2xl {
+  font-size: 22px !important;
+}
+.text-3xl {
+  font-size: 24px !important;
+}
+.text-3xl {
+  font-size: 26px !important;
+}
+.text-4xl {
+  font-size: 28px !important;
+}
+.text-5xl {
+  font-size: 30px !important;
+}
+.text-6xl {
+  font-size: 35px !important;
+}
+.text-7xl {
+  font-size: 40px !important;
+}
+.text-8xl {
+  font-size: 45px !important;
+}
+.text-9xl {
+  font-size: 50px !important;
+}
+.text-10xl {
+  font-size: 60px !important;
+}
+.text-100xl {
+  font-size: 100px !important;
+}
+.font-light {
+  font-weight: 300 !important;
+}
+.font-normal {
+  font-weight: 400 !important;
+}
+.font-medium {
+  font-weight: 500;
+}
+.font-semibold {
+  font-weight: 600;
+}
+.font-bold {
+  font-weight: 700;
+}
+.font-bolder {
+  font-weight: 800;
+}
+
+/* /////////////////////////////////////////////////////////// */
+
+.text-green,
+.c-green {
+  color: rgb(2, 241, 58);
+}
+
+.text-red,
+.c-red {
+  color: rgb(230, 34, 34);
+}
+
+.text-blue,
+.c-blue {
+  color: rgb(13, 89, 240);
+}
+
+.text-pink,
+.c-pink {
+  color: rgb(250, 46, 155);
+}
+
+.text-deepskyblue,
+.c-deepskyblue {
+  color: rgb(28, 197, 253);
+}
+
+.text-gray,
+.c-gray {
+  color: rgb(193, 191, 191);
+}
+
+.text-lightgray,
+.c-lightgray {
+  color: rgb(236, 236, 236);
+}
+
+.text-white,
+.c-white {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.text-black,
+.c-black {
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-yellow,
+.c-yellow {
+  color: rgb(247, 247, 76);
+}
+
+.bg-green {
+  background-color: rgb(2, 241, 58);
+}
+
+.bg-red {
+  background-color: rgb(230, 34, 34);
+}
+
+.bg-blue {
+  background-color: rgb(13, 89, 240);
+}
+
+.bg-pink {
+  background-color: rgb(250, 46, 155);
+}
+
+.bg-deepskyblue {
+  background-color: rgb(28, 197, 253);
+}
+
+.bg-gray {
+  background-color: rgb(193, 191, 191);
+}
+
+.bg-lightgray {
+  background-color: rgb(243, 243, 243);
+}
+
+.bg-white {
+  background-color: white;
+}
+
+.bg-black {
+  background-color: black;
+}
+
+.bg-yellow {
+  background-color: rgb(247, 247, 76);
+}
+
+.bg-brown {
+  background-color: rgb(164, 32, 32);
+}
+
+/* ///////////////////////////////////////////////////////////////////// */
+
+.absolute {
+  position: absolute;
+}
+.relative {
+  position: relative;
+}
+.fixed {
+  position: fixed;
+}
+.top-0 {
+  top: 0;
+}
+.bottom-0 {
+  bottom: 0;
+}
+.left-0 {
+  left: 0;
+}
+.right-0 {
+  right: 0;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+.overflow-scroll {
+  overflow: scroll;
+}
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+.capitalize {
+  text-transform: capitalize;
+}
+.uppercase {
+  text-transform: uppercase;
+}
+/* /////////////////////////////////////////////////////////// */
+
+.opacity-10 {
+  opacity: 0.1;
+}
+.opacity-20 {
+  opacity: 0.2;
+}
+.opacity-30 {
+  opacity: 0.3;
+}
+.opacity-40 {
+  opacity: 0.4;
+}
+.opacity-50 {
+  opacity: 0.5;
+}
+.opacity-60 {
+  opacity: 0.6;
+}
+.opacity-70 {
+  opacity: 0.7;
+}
+.opacity-80 {
+  opacity: 0.8;
+}
+.opacity-90 {
+  opacity: 0.9;
+}
+.opacity-100 {
+  opacity: 1;
+}
+.invisible {
+  display: none;
+}
+.opacity-0 {
+  opacity: 0;
+}
+
+/* ////////////////////////////////////////////////////////// */
+
+.rounded-none {
+  border-radius: 0px;
+}
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+.rounded-md {
+  border-radius: 0.375rem;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+.rounded-full {
+  border-radius: 9999px;
+}
+.rounded-t-none {
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+}
+.rounded-t-sm {
+  border-top-left-radius: 0.125rem;
+  border-top-right-radius: 0.125rem;
+}
+.rounded-t {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+.rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+.rounded-t-xl {
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
+}
+.rounded-t-2xl {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+.rounded-t-3xl {
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+}
+.rounded-t-full {
+  border-top-left-radius: 9999px;
+  border-top-right-radius: 9999px;
+}
+.rounded-r-none {
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+.rounded-r-sm {
+  border-top-right-radius: 0.125rem;
+  border-bottom-right-radius: 0.125rem;
+}
+.rounded-r {
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+.rounded-r-md {
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+.rounded-r-lg {
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+.rounded-r-xl {
+  border-top-right-radius: 0.75rem;
+  border-bottom-right-radius: 0.75rem;
+}
+.rounded-r-2xl {
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+.rounded-r-3xl {
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+}
+.rounded-r-full {
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+}
+.rounded-b-none {
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.rounded-b-sm {
+  border-bottom-right-radius: 0.125rem;
+  border-bottom-left-radius: 0.125rem;
+}
+.rounded-b {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+.rounded-b-md {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+.rounded-b-xl {
+  border-bottom-right-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
+}
+.rounded-b-2xl {
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+.rounded-b-3xl {
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+.rounded-b-full {
+  border-bottom-right-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+.rounded-l-none {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.rounded-l-sm {
+  border-top-left-radius: 0.125rem;
+  border-bottom-left-radius: 0.125rem;
+}
+.rounded-l {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+.rounded-l-md {
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+.rounded-l-lg {
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+.rounded-l-xl {
+  border-top-left-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
+}
+.rounded-l-2xl {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+.rounded-l-3xl {
+  border-top-left-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+.rounded-l-full {
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+.rounded-tl-none {
+  border-top-left-radius: 0px;
+}
+.rounded-tl-sm {
+  border-top-left-radius: 0.125rem;
+}
+.rounded-tl {
+  border-top-left-radius: 0.25rem;
+}
+
+.rounded-tl-md {
+  border-top-left-radius: 0.375rem;
+}
+.rounded-tl-lg {
+  border-top-left-radius: 0.5rem;
+}
+
+.rounded-tl-xl {
+  border-top-left-radius: 0.75rem;
+}
+.rounded-tl-2xl {
+  border-top-left-radius: 1rem;
+}
+.rounded-tl-3xl {
+  border-top-left-radius: 1.5rem;
+}
+.rounded-tl-full {
+  border-top-left-radius: 9999px;
+}
+.rounded-tr-none {
+  border-top-right-radius: 0px;
+}
+.rounded-tr-sm {
+  border-top-right-radius: 0.125rem;
+}
+.rounded-tr {
+  border-top-right-radius: 0.25rem;
+}
+.rounded-tr-md {
+  border-top-right-radius: 0.375rem;
+}
+.rounded-tr-lg {
+  border-top-right-radius: 0.5rem;
+}
+.rounded-tr-xl {
+  border-top-right-radius: 0.75rem;
+}
+.rounded-tr-2xl {
+  border-top-right-radius: 1rem;
+}
+.rounded-tr-3xl {
+  border-top-right-radius: 1.5rem;
+}
+.rounded-tr-full {
+  border-top-right-radius: 9999px;
+}
+.rounded-br-none {
+  border-bottom-right-radius: 0px;
+}
+.rounded-br-sm {
+  border-bottom-right-radius: 0.125rem;
+}
+.rounded-br {
+  border-bottom-right-radius: 0.25rem;
+}
+.rounded-br-md {
+  border-bottom-right-radius: 0.375rem;
+}
+.rounded-br-lg {
+  border-bottom-right-radius: 0.5rem;
+}
+.rounded-br-xl {
+  border-bottom-right-radius: 0.75rem;
+}
+.rounded-br-2xl {
+  border-bottom-right-radius: 1rem;
+}
+.rounded-br-3xl {
+  border-bottom-right-radius: 1.5rem;
+}
+.rounded-br-full {
+  border-bottom-right-radius: 9999px;
+}
+.rounded-bl-none {
+  border-bottom-left-radius: 0px;
+}
+.rounded-bl-sm {
+  border-bottom-left-radius: 0.125rem;
+}
+.rounded-bl {
+  border-bottom-left-radius: 0.25rem;
+}
+.rounded-bl-md {
+  border-bottom-left-radius: 0.375rem;
+}
+.rounded-bl-lg {
+  border-bottom-left-radius: 0.5rem;
+}
+.rounded-bl-xl {
+  border-bottom-left-radius: 0.75rem;
+}
+.rounded-bl-2xl {
+  border-bottom-left-radius: 1rem;
+}
+.rounded-bl-3xl {
+  border-bottom-left-radius: 1.5rem;
+}
+.rounded-bl-full {
+  border-bottom-left-radius: 9999px;
+}
+
+/* ////////////////////////////////////////////////////////////// */
+
+.shadow-sm {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
+.shadow-md {
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+.shadow-lg {
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+.shadow-xl {
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+.shadow-2xl {
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+}
+
+/* ///////////////////////////////////////////////////////// */
+
+.border-lightgray {
+  border: 1px solid rgb(224, 224, 224);
+}
+.border-gray {
+  border: 1px solid rgb(191, 190, 190);
+}
+.border-black {
+  border: 1px solid black;
+}
+.border-b-black {
+  border-bottom: 1px solid black;
+}
+.border-l-black {
+  border-left: 1px solid black;
+}
+.border-r-black {
+  border-right: 1px solid black;
+}
+.border-t-black {
+  border-top: 1px solid black;
+}
+.border-b-lightgray {
+  border-bottom: 1px solid rgb(224, 224, 224);
+}
+.border-l-lightgray {
+  border-left: 1px solid rgb(224, 224, 224);
+}
+.border-r-lightgray {
+  border-right: 1px solid rgb(224, 224, 224);
+}
+.border-t-lightgray {
+  border-top: 1px solid rgb(224, 224, 224);
+}
+.border-b-gray {
+  border-bottom: 1px solid rgb(191, 190, 190);
+}
+.border-l-gray {
+  border-left: 1px solid rgb(191, 190, 190);
+}
+.border-r-gray {
+  border-right: 1px solid rgb(191, 190, 190);
+}
+.border-t-gray {
+  border-top: 1px solid rgb(191, 190, 190);
 }
